4/27/19
    - Add API for Buddy/Kin calls and VMeters (ie: fuel-level, etc) calls

4/26/19
    - When item on mouse is locked it won't show its tooltip anymore, allowing you to see the tooltips of other things
    - Fixed memory leak with hotbar keybinds and switching characters repeatedly.
    - Updated grid colors so that mines aren't colored black..

4/25/19
    - Fixed smelter hitboxes and bug with hitboxes that were customized
    - Added tracking angles to the map to try it out

4/16/19
    - Fixed black screen bug with Grid lines once you go into negatives
    - Changed parts of discord api

4/14/19
    - Minor changes to dig clay script, destroy
    - fixed issue with sketchpad crashing
    - Reduced aging for clicks
    - destumper script for more generic stump removal

4/13/19
    - Scout script is born
    - Added in Mark for script to the alt+ right click menu for scripts that need such input
    - destroy-objs script is back and more legacy fun
    - Few other fixes throughout

4/11/19
    - Scripting is now a thing, first few bots are the usual auto-drink, an eat-all-food in inventory, a acre-clay digger
    and its partner stockpile acre clay bot.
        - All scripts typically will check for stamina and auto drink on their own. One difference over the old scripts
        is that these will now also refill waterskins/flasks buckets from nearby barrels of water if needed
    - Bot chat channel is back, if there's a prompt or event it has to wait on the user it'll be in here
    - Tooltips for custom menu icons on your hotbars will now display properly
    - Updated omni's sounds to the latest
    - Bulk farming bot (farm-area), stockpile bot to go with it for flax fibres, the quick-action bot is back, probably
    needs improvements but it should do most of what it did in old hafen. script just for drinking water from any inventory
    as well (drink-water); other improvements to the clay diggers

4/9/19